--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <main class="main">
     <section class="slider">
-      <div class="slider__item"></div>
-      <div class="slider__item"></div>
-      <div class="slider__item"></div>
+      <div class="slider__item" style=" background-image:url('images/slider-item.jpg');"></div>
+      <div class="slider__item" style=" background-image:url('images/slider-item.jpg');"></div>
+      <div class="slider__item" style=" background-image:url('images/slider-item.jpg');"></div>
     </section>
 
     <section class="search">
